Worked on the table in vorlesung1.tex

--- a/src/content/mainmatter/vorlesungsfragen/vorlesung1.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung1.tex
@@ -245,7 +245,9 @@
     \hline
     Grenzen & streng & nicht sehr streng \tabularnewline
     \hline
-    Ansatz & vertikal & horizontal – & verwendet verschiedene Session- und Präsentationsschichten & verwendet in der Anwendungsschicht sowohl die Session- als auch die Präsentationsschicht \tabularnewline
+    Ansatz & vertikal & horizontal \tabularnewline
+    \hline
+    – & verwendet verschiedene Session- und Präsentationsschichten & verwendet in der Anwendungsschicht sowohl die Session- als auch die Präsentationsschicht \tabularnewline
     \hline
     Kommunikation & Unterstützt auf der Netzwerkebene sowohl verbindungslose als auch verbindungsorientierte Kommunikation & bietet Unterstützung für die verbindungslose Kommunikation innerhalb der Netzwerkschicht \tabularnewline
     \hline
