Worked on vorlesung12.tex

--- a/src/content/mainmatter/beispielaufgaben/vorlesung11Loesungen.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung11Loesungen.tex
@@ -30,5 +30,4 @@ Danach rechnen wir so lange in Modulo-2 Arithmetik (XOR-Verknüpfungen), bis kei
     \end{tabular}
 \end{center}
 
-Das Ergebnis der Prüfsummenberechnung ist 00001,
-d. h. die zu sendende Bitfolge ist: 11110111\textcolor{blue}{00001}
+Das Ergebnis der Prüfsummenberechnung ist 00001, d.\ h. die zu sendende Bitfolge ist: 11110111\textcolor{blue}{00001}
