--- a/src/content/mainmatter/vorlesungsfragen/vorlesung2.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung2.tex
@@ -34,8 +34,8 @@
 
 \minisec{Wodurch unterscheiden sich Little- und Big-Endian-CPUs, und warum kann das zu Problemen bei der Datenkommunikation führen?}
 \begin{itemize}
-    \item Bei \textbf{Big-Endian} wird das 'große Ende' (also der signifikanteste Wert in der Sequenz) zuerst abgelegt (also in niedrigsten Speicheradresse)
-    \item Bei \textbf{Little-Endian} wir der „kleinste Ende“ (also der am wenigsten signifikante Wert) zuerst gespeichert
+    \item Bei \textbf{Big-Endian} wird das „große Ende“ (also der signifikanteste Wert in der Sequenz) zuerst abgelegt (also in niedrigsten Speicheradresse)
+    \item Bei \textbf{Little-Endian} wird das „kleinste Ende“ (also der am wenigsten signifikante Wert) zuerst gespeichert
 \end{itemize}
 
 \minisec{Definieren Sie die Begriffe ``Abstrakte Syntax`` und ``Transfersyntax``}
@@ -82,7 +82,7 @@
     \end{itemize}
     \item Java:
     \begin{itemize}
-        \item Objektserialisierung, d.h. Abflachung eines (oder mehrerer) Objektes zu einem seriellen Format inkl. Informationen über die Klassen.
+        \item Objektserialisierung, d.\ h. Abflachung eines (oder mehrerer) Objektes zu einem seriellen Format inkl.\ Informationen über die Klassen.
         Deserialisierung ist die Wiederherstellung eines Objektes ohne Vorwissen über die Typen der Objekte
     \end{itemize}
     \item JavaScript:
@@ -109,7 +109,7 @@
         \begin{lstlisting}[label={lst:lstlisting3}]
             <name attribute=``Wert``>
         \end{lstlisting}
-        \item Entity-Referenzen (\&lt; statt <)
+        \item Entity-Referenzen (\&lt; \ statt <)
         \item Kommentare \linebreak
         <!– Das ist ein Kommentar -->
         \item Processing Instructions – werden an die aufrufende Instanz weitergeleitet \linebreak
