--- a/src/content/mainmatter/vorlesungsfragen/vorlesung6.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung6.tex
@@ -29,7 +29,7 @@
     \begin{itemize}
         \item Verschicke ein Segment und warte auf den Empfang des ACKs
         \item Bei Empfang eines ACKs wird das nächste Segment verschickt, andernfalls wird die Übertragung wiederholt
-        \item Jeder Datenstrom wird in Segmente unterteilt, z.B. 1460 Bytes Nutzdaten
+        \item Jeder Datenstrom wird in Segmente unterteilt, z.\ B. 1460 Bytes Nutzdaten
         \item Nach jedem gesendeten Segment wird auf eine Bestätigung gewartet;
         während der Wartezeit werden keine weiteren Segmente übertragen
     \end{itemize}
