--- a/src/main.tex
+++ b/src/main.tex
@@ -10,8 +10,7 @@
     pdftitle = {Kommunikationssysteme Selbstlernfragen und Antworten},
     pdfauthor = {Sven Bergmann},
     pdfsubject = {Kommunikationssysteme},
-    pdfkeywords = {Kommunikationssysteme, Selbstlernfragen, Antworten},
-    bookmarks = true
+    pdfkeywords = {Kommunikationssysteme, Selbstlernfragen, Antworten}
 }
 
 \begin{document}
@@ -43,5 +42,8 @@
     \include{content/mainmatter/vorlesungsfragen/vorlesung11}
     \include{content/mainmatter/beispielaufgaben/vorlesung11Aufgaben}
     \include{content/mainmatter/beispielaufgaben/vorlesung11Loesungen}
+    \include{content/mainmatter/vorlesungsfragen/vorlesung12}
+    \include{content/mainmatter/beispielaufgaben/vorlesung12Aufgaben}
+    \include{content/mainmatter/beispielaufgaben/vorlesung12Loesungen}
 
 \end{document}
