--- a/src/content/mainmatter/beispielaufgaben/vorlesung7Loesungen.tex
+++ b/src/content/mainmatter/beispielaufgaben/vorlesung7Loesungen.tex
@@ -3,16 +3,16 @@
 \minisec{Übungsaufgabe 1:}
 \begin{enumerate}
     \item Es wird kein einfacher Handshake verwendet, weil dann nicht jede Nachricht mit Verbindungswunsch (SYN Pakete) quittiert wurde.
-    Nach der 3. Nachricht ist jede der beiden SYN-Nachrichten quittiert worden!
-    \item Nein, nach der 3. Nachricht weiß der Initiator des Verbindungsaufbaus nicht, ob die 3. Nachricht nicht verloren gegangen ist (Stichwort: 2 army problem).
-    Man geht aber davon aus, dass die 3. Nachricht genauso wie die 1. Nachricht (gleiche Richtung) erfolgreich zugestellt wurde.
+    Nach der 3.\ Nachricht ist jede der beiden SYN-Nachrichten quittiert worden!
+    \item Nein, nach der 3.\ Nachricht weiß der Initiator des Verbindungsaufbaus nicht, ob die 3.\ Nachricht nicht verloren gegangen ist (Stichwort: 2 army problem).
+    Man geht aber davon aus, dass die 3.\ Nachricht genauso wie die 1.\ Nachricht (gleiche Richtung) erfolgreich zugestellt wurde.
     \item Durch die bei TCP folgende Datenübertragung wird der Verbindungsaufbau indirekt mit bestätigt.
     Mit dem Verbindungsaufbau wird eine 'Bestätigungskette' über die ACKs aufgebaut, die am Anfang der Datenübertragung auch den Verbindungsaufbau bestätigt, also die 4. Nachricht die 3. Nachricht bestätigt, u.s.w.
 \end{enumerate}
 
 \minisec{Übungsaufgabe 2:}
 \begin{enumerate}
-    \item Das Silly-Window-Syndrom besteht, wenn TCP-Segmente/Pakete mit einer sehr geringen ('silly') Anzahl an Nutzdaten (z.B. nur einem Byte) gesendet werden.
+    \item Das Silly-Window-Syndrom besteht, wenn TCP-Segmente/Pakete mit einer sehr geringen ('silly') Anzahl an Nutzdaten (z.\ B. nur einem Byte) gesendet werden.
     Man kann das Problem beheben, wenn man erst auf mehr Daten wartet, und dann ein größeres Datenpaket schickt.
     Manchmal muss man das Versenden der Daten erzwingen (Stichwort 'flush').
     \item Durch den Keepalive-Mechanismus bleibt die Verbindung im Normalfall bestehen.
@@ -30,6 +30,9 @@ Das erforderliche Sendefenster ergibt sich aus dem Bandwidth-Delay Produkt:
 \[40.000.000 \frac{Bit}{s} * 0,1s = 4.000.000 Bit = 500.000 Byte\]
 Diese Fenstergröße kann im Original-TCP Header nicht abgebildet werden (maximal 64kB).
 Daher muss die Window-Scale Option eingesetzt werden.
-Damit die erforderliche Fensterbreite verwendet werden kann, muss der ursprüngliche Maximalwert (64kB) mindestens mit Faktor 8 multipliziert werden (524288 Bytes). D.h. im 3. Byte der Window-Scale Option muss mindestens eine 3 stehen ($2^3$ = Faktor 8). Dadurch können nun allerdings Fenstergrößen nur noch in Vielfachen
+Damit die erforderliche Fensterbreite verwendet werden kann, muss der ursprüngliche Maximalwert (64kB) mindestens mit Faktor 8 multipliziert werden (524288 Bytes).
+D.\ h. im 3.\ Byte der Window-Scale Option muss mindestens eine 3 stehen ($2^3$ = Faktor 8).
+Dadurch können nun allerdings Fenstergrößen nur noch in Vielfachen
 von 8 Byte kommuniziert werden!
-Beim Verbindungsaufbau muss bei beiden SYN-Nachrichten die Window-Scale Option entsprechend mitgesendet werden, damit ein Voll-Duplex Betrieb mit 40MBit/s möglich ist. Eine nachträgliche Änderung der Fenster-Skalierung ist nach erfolgtem Verbindungsaufbau nicht mehr möglich!
+Beim Verbindungsaufbau muss bei beiden SYN-Nachrichten die Window-Scale Option entsprechend mitgesendet werden, damit ein Voll-Duplex Betrieb mit 40MBit/s möglich ist.
+Eine nachträgliche Änderung der Fenster-Skalierung ist nach erfolgtem Verbindungsaufbau nicht mehr möglich!
