--- a/src/content/mainmatter/vorlesungsfragen/vorlesung10.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung10.tex
@@ -4,7 +4,7 @@
 \begin{itemize}
     \item LLC Sublayer: Das Protokoll LLC fügt einem gegebenen Datenpaket aus einer übergeordneten Schicht (meist der OSI-Schicht 3 „Vermittlungsschicht“) drei Felder hinzu:
     \begin{itemize}
-        \item zwei jeweils 8 Bit bzw. 1 Byte große Kennzeichen:
+        \item zwei jeweils 8 Bit bzw.\ 1 Byte große Kennzeichen:
         \begin{itemize}
             \item DSAP (Destination Service Access Point: Einsprungadresse des Empfängers)
             \item SSAP (Source Service Access Point: Einsprungadresse des Absenders)
@@ -14,12 +14,12 @@
     \item MAC Sublayer:
     \begin{itemize}
         \item Das \textbf{Kanalzugriffsprotokoll} beschreibt, nach welchen Regeln auf ein Übertragungsmedium zugegriffen werden darf,
-        d. h. ein Rahmen auf der Verbindungsleitung übertragen werden darf
+        d.\ h. ein Rahmen auf der Verbindungsleitung übertragen werden darf
         \item Bei \underline{Punkt-zu-Punkt}-Verbindungen ist das Leitungszugriffsprotokoll einfach.
         \item Der Sender kann einen Rahmen senden, wann immer die Verbindungsleitung frei ist (bei vollduplex immer)
         \item Bei \underline{Multi-Access-Netzen} teilen sich mehrere Teilnehmer eine Verbindungsleitung, z. B. nach dem Bus-Prinzip.
         \item Hier übernimmt der MAC Layer die Koordination der Leitungsnutzung
-        \item Der MAC-Layer liefert eine eindeutige Kennung für jedes Netzwerkgerät bzw. jede Netzwerk-Karte → \textcolor{blue}{MAC} Adresse
+        \item Der MAC-Layer liefert eine eindeutige Kennung für jedes Netzwerkgerät bzw.\ jede Netzwerk-Karte → \textcolor{blue}{MAC} Adresse
     \end{itemize}
 \end{itemize}
 
@@ -85,10 +85,10 @@
     \item Dispersion
     \begin{itemize}
         \item Begrenzt Übertragungsstrecke
-        \item Lichtpuls besteht aus mehreren Wellen (Strahlen) -> Einfallswinkel dieser Strahlen unterschiedlich
+        \item Lichtpuls besteht aus mehreren Wellen (Strahlen) → Einfallswinkel dieser Strahlen unterschiedlich
         \item Lichtstrahlen kommen im Medium unterschiedlich schnell vorwärts:
         \begin{itemize}
-            \item Wege (Moden) der Strahlen unterschiedlich lang (abhg. von Einfallswinkel)
+            \item Wege (Moden) der Strahlen unterschiedlich lang (abhg.\ von Einfallswinkel)
             \item Strahlen eines Impulses kommen zeitversetzt am Ende des Kabels an
             \item Intensität der Impulse nimmt ab, benachbarte Impulse verschwimmen
         \end{itemize}
@@ -181,7 +181,7 @@
     \begin{itemize}
         \item Kann einkommende Signale als „0“ oder „1“ interpretieren
         \item Empfang und \textcolor{blue}{Auffrischung} des Signals – ein empfangenes Bit wird auf der anderen Seite neu als Stromimpuls codiert
-        \item Kein Verstehen von Adressen höherer Schichten, alle Daten werden weitergeleitet (das Netz bleibt z.B. ein Multi-Access-Netz)
+        \item Kein Verstehen von Adressen höherer Schichten, alle Daten werden weitergeleitet (das Netz bleibt z.\ B. ein Multi-Access-Netz)
     \end{itemize}
 \end{itemize}
 
@@ -192,7 +192,7 @@
         \item Signalauffrischung wie beim Repeater
         \item An einen Anschluss kann ein einzelner Rechner oder ein ganzer Bus angeschlossen werden
         \item Multi-Access-Netz: der Hub gibt ein empfangenes Signal auf allen Anschlüssen wieder aus, praktisch wie ein "Bus" mit mehreren Anschlüssen:
-        \item \textcolor{blue}{Gemeinsamer Übertragungskanal}, d. h. Stationen können nicht gleichzeitig senden und empfangen, nur eine Station auf einmal kann senden
+        \item \textcolor{blue}{Gemeinsamer Übertragungskanal}, d.\ h. Stationen können nicht gleichzeitig senden und empfangen, nur eine Station auf einmal kann senden
         \item Geringe Sicherheit, da alle Stationen mithören können
     \end{itemize}
     \item Switch - Wie Hub, aber:
