--- a/src/content/mainmatter/vorlesungsfragen/vorlesung3.tex
+++ b/src/content/mainmatter/vorlesungsfragen/vorlesung3.tex
@@ -2,10 +2,11 @@
 
 \minisec{Was ist ein sog. Autonomes System (AS) im Internet?}
 \begin{itemize}
-    \item In IP-Netzen sind autonome Systeme (AS) ein Verbund von Routern und Netzwerken, die einer einzigen administrativen Instanz unterstehen, einer Organisation oder einem Unternehmen. Das bedeutet, dass sie alle zu einer Organisation oder zu einem Unternehmen gehören.
+    \item In IP-Netzen sind autonome Systeme (AS) ein Verbund von Routern und Netzwerken, die einer einzigen administrativen Instanz unterstehen, einer Organisation oder einem Unternehmen.
+    Das bedeutet, dass sie alle zu einer Organisation oder zu einem Unternehmen gehören.
 \end{itemize}
 
-\minisec{Wodurch sind Tier 1-3 ISPs charakterisiert?}
+\minisec{Wodurch sind Tier 1--3 ISPs charakterisiert?}
 \begin{itemize}
     \item Tier 1 Internet Service Provider (ISPs) (bieten die Basis des Internets)
     \begin{itemize}
@@ -15,11 +16,11 @@
     \item Tier 2 ISPs: kleinerer (oft nur regional tätiger) ISP
     \begin{itemize}
         \item Anbindung an einen oder mehrerer Tier-1 ISPs
-        \item Ggf. Anbindung an weitere Tier-2 ISPs
+        \item Ggf.\ Anbindung an weitere Tier-2 ISPs
     \end{itemize}
     \item Tier 3 ISPs und lokale ISPs
     \begin{itemize}
-        \item Binden die Kunden an (“access network”, z.B. über DSL)
+        \item Binden die Kunden an (“access network”, z.\ B. über DSL)
         \item Dienst nahe den Endsystemen
     \end{itemize}
 \end{itemize}
@@ -42,7 +43,7 @@
 \minisec{Wie viele Knoten (Hosts) können maximal an ein Class-B Netz angeschlossen werden?}
 IP-Adressklassen:
 \begin{enumerate}
-    \item Class A für Netze mit bis zu 16 Mio. Knoten (0-127)
+    \item Class A für Netze mit bis zu 16 Mio.\ Knoten (0-127)
     \item Class B für Netze mit bis zu 65.536 Knoten (128-191)
     \item Class C für Netze mit bis zu 256 Knoten (192-223)
     \item Class D für Gruppenkommunikation (Multicast) (224)
@@ -51,17 +52,17 @@ IP-Adressklassen:
 \begin{center}
     \begin{tabular}{|c|c|c|c|c|}
         \hline
-        Class & Start     & Ende            & Anzahl Netze & Rechner / Netz \\
+        Class & Start & Ende & Anzahl Netze & Rechner / Netz \tabularnewline
         \hline
-        A     & 1.0.0.0   & 127.255.255.255 & 127          & 16.777.214     \\
+        A & 1.0.0.0 & 127.255.255.255 & 127 & 16.777.214 \tabularnewline
         \hline
-        B     & 128.0.0.0 & 191.255.255.255 & 16384        & 65534          \\
+        B & 128.0.0.0 & 191.255.255.255 & 16384 & 65534 \tabularnewline
         \hline
-        C     & 192.0.0.0 & 223.255.255.255 & 2.097.152    & 254            \\
+        C & 192.0.0.0 & 223.255.255.255 & 2.097.152 & 254 \tabularnewline
         \hline
-        D     & 224.0.0.0 & 239.255.255.255 & Multicast    &                \\
+        D & 224.0.0.0 & 239.255.255.255 & Multicast & \tabularnewline
         \hline
-        E     & 240.0.0.0 & 255.255.255.254 & Reserved     &                \\
+        E & 240.0.0.0 & 255.255.255.254 & Reserved & \tabularnewline
         \hline
     \end{tabular}
 \end{center}
@@ -84,11 +85,11 @@ IP-Adressklassen:
     Dieser Bereich wird dabei durch Einsen („1“) in der binären Form der Subnetzmaske festgestellt.
     \begin{center}
         \begin{tabular}{c|c c c c}
-            Beispiel   & 140. & 201. & 10.  & 100 \\
-            & 255. & 255. & 255. & 0   \\
-            Netzwerk:  & 140. & 201. &      &     \\
-            Subnetz:   &      &      & 10.  &     \\
-            Endsystem: &      &      &      & 100 \\
+            Beispiel & 140.\ & 201.\ & 10.\  & 100 \tabularnewline
+            & 255.\ & 255.\ & 255.\ & 0 \tabularnewline
+            Netzwerk: & 140.\ & 201.\ & & \tabularnewline
+            Subnetz: & & & 10.\ & \tabularnewline
+            Endsystem: & & & & 100 \tabularnewline
         \end{tabular}
     \end{center}
 \end{itemize}
@@ -102,13 +103,13 @@ IP-Adressklassen:
 \begin{itemize}
     \item Trennung von starrer Klasseneinteilung durch Ersetzen der festen Klassen durch Netzwerk-Präfixe variabler Länge
     \item Die Längenangabe sagt aus, wie viele Bit als Netzteil der Adresse verwendet werden sollen (Länge der 1-Folge)
-    \item Router merken sich in ihrer Routing-Tabelle zusätzlich zu den IP-Adressen die Präfixlänge, z.B. 194.142.0.x/17 = betrachte die ersten 17 Bit als Netzadresse
+    \item Router merken sich in ihrer Routing-Tabelle zusätzlich zu den IP-Adressen die Präfixlänge, z.\ B. 194.142.0.x/17 = betrachte die ersten 17 Bit als Netzadresse
     \item Sehr flexible Gestaltung von Routing-Tabellen möglich
 \end{itemize}
 
 \minisec{Was muss ein Router bei Verwendung von CIDR für jeden Eintrag in der Routing-Tabelle speichern?}
 \begin{itemize}
-    \item Router merken sich in ihrer Routing-Tabelle zusätzlich zu den IP-Adressen die Präfixlänge, z.B. 194.142.0.x/17 = betrachte die ersten 17 Bit als Netzadresse
+    \item Router merken sich in ihrer Routing-Tabelle zusätzlich zu den IP-Adressen die Präfixlänge, z.\ B. 194.142.0.x/17 = betrachte die ersten 17 Bit als Netzadresse
 \end{itemize}
 
 \minisec{Erklären Sie das Logest-Prefix-Match Verfahren!}
@@ -121,7 +122,7 @@ IP-Adressklassen:
         \hline
         Route \#1 & 11.1.2.0/24 & = \textcolor{green}{00001011.0000001.00000010}.00000000 \tabularnewline
         Route \#2 & 11.1.0.0/16 & = \textcolor{orange}{00001011.0000001}.00000000.00000000 \tabularnewline
-        Route \#3 & 11.0.0.0/8  & = \textcolor{orange}{00001011}.0000000.00000000.00000000 \tabularnewline
+        Route \#3 & 11.0.0.0/8 & = \textcolor{orange}{00001011}.0000000.00000000.00000000 \tabularnewline
     \end{tabular}
 \end{center}
 Es wird der Weg ermittelt, welcher am genausten spezifiziert wird (most specific)
@@ -136,7 +137,9 @@ Es wird der Weg ermittelt, welcher am genausten spezifiziert wird (most specific
     \item \textbf{Vorsicht:} Durch das Zusammenfassen von Routing-Einträgen dürfen keine fehlerhaften Regeln entstehen
     \begin{enumerate}
         \item Ein Zusammenfassen in nur möglich, wenn gleiche Ziele (Next Hop) verwendet werden
-        \item Die relaxierte Interpretation der Netzwerkadresse kann ggf. andere, nicht gewollte Einträge umfassen. Hier hilft aber ggf. die Longest Match Regel. Hierzu muss aber der Präfix der überschriebenen Regel länger sein.
+        \item Die relaxierte Interpretation der Netzwerkadresse kann ggf.\ andere, nicht gewollte Einträge umfassen.
+        Hier hilft aber ggf.\ die Longest Match Regel.
+        Hierzu muss aber der Präfix der überschriebenen Regel länger sein.
         \item 0.0.0.0/0 ist ein Default-Route
     \end{enumerate}
 \end{itemize}
